[package]
authors = ["Tanveer Wahid <twahid@keeta.com>"]
edition = "2021"
name = "asn1-napi-rs"
version = "1.1.6"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2.12.6", features = ["chrono_date", "error_anyhow", "napi7"] }
phf = { version = "0.11.1", features = ["macros"] }
napi-derive = "2.11.0"
rasn = "0.6.1"
num-bigint = "0.4.3"
chrono = "0.4.22"
base64 = "0.13.0"
hex = "0.4.3"
anyhow = "1.0.65"
thiserror = "1.0.37"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
