[package]
authors = ["Tanveer Wahid <twahid@keeta.com>"]
edition = "2021"
name = "asn1-napi-rs"
version = "1.2.0"
rust-version = "1.77"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.6", features = ["full", "error_anyhow"] }
phf = { version = "0.11.1", features = ["macros"] }
napi-derive = "2.12.5"
rasn = "0.7.0"
num-bigint = "0.4.3"
chrono = "0.4.24"
base64 = "0.13.0"
hex = "0.4.3"
anyhow = "1.0.71"
thiserror = "1.0.40"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
